# meal_plan_api

./: justfile  pyproject.toml
meal_plan/: containers.py  main.py
meal_plan/api/: endpoints.py  main.py
meal_plan/core/: meal_plan.py  meal_plan_repository.py  meal_plan_service.py
meal_plan/infra/: in_memory_meal_plan_repository.py
tests/core/: test_meal_plan_service.py
