[tool.poetry]
name = "meal-plan"
version = "0.1.0"
description = ""
authors = ["Julio <julio.olvr@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = { extras = ["all"], version = "^0.103.1" }
ruff = "^0.0.287"


[tool.poetry.group.dev.dependencies]
mypy = "~1.4.0"
black = "^23.9.1"

[tool.mypy]
disallow_any_unimported = true
disallow_untyped_defs = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
